Endpoint /get-csv-file now works
